--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
 *.class
 */target/*
+*/*/*/target/*
 */.settings/*
+*/*/*/.settings/*
 */.classpath
+*/*/*/.classpath
 */.project
+*/*/*/.project
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
